--- a/index.html
+++ b/index.html
@@ -16,10 +16,15 @@
     </header>
     <main class="container">
         <div class="flex-container">
-        <div class="item">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum sint voluptatem doloribus, necessitatibus nam at soluta exercitationem similique sed recusandae quidem voluptates ipsam laborum suscipit in culpa labore libero nesciunt.</div>
-        <div class="item">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, et consectetur. Non pariatur autem sequi earum recusandae nulla voluptatibus illo dolorum sapiente impedit? Amet labore ut sequi magnam facilis aperiam.</div>
-        <div class="item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae incidunt explicabo, sunt ducimus deserunt soluta provident vel iusto quibusdam, delectus ullam et corporis id harum dignissimos modi ab sint. Vero!</div>
-    </div>
+        <div class="item">
+            <h3 class="title">Title column 1</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque nulla maxime at repellat debitis quod ratione eaque molestiae ipsum excepturi? Sapiente cum doloremque quasi provident voluptas vel vero iusto dignissimos.</p>    </div>
+        <div class="item">
+            <h3 class="title">Title column 2</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque nulla maxime at repellat debitis quod ratione eaque molestiae ipsum excepturi? Sapiente cum doloremque quasi provident voluptas vel vero iusto dignissimos.</p>    </div>
+        <div class="item">
+            <h3 class="title">Title column 3</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque nulla maxime at repellat debitis quod ratione eaque molestiae ipsum excepturi? Sapiente cum doloremque quasi provident voluptas vel vero iusto dignissimos.</p>    </div>
     </main>
     <footer class="container">
         <h2>Next section title</h2>
